k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-supply-chain-inventory
  labels:
    app.kubernetes.io/name: secure-supply-chain-inventory
    app.kubernetes.io/instance: base
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app.kubernetes.io/name: secure-supply-chain-inventory
    app.kubernetes.io/instance: base
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
  clusterIP: None
